# django-expanded-test-cases

./: .gitignore  .pylintrc  .readthedocs.yaml  MANIFEST.in  Pipfile  generate_docs.sh  pyproject.toml  readme.md  runpytests.py  runtests.py  setup.cfg  show_colors.py  tox.ini
.github/dependency_versions/3.6/: 01_minimal.txt  02_pytest.txt  03_colorama.txt  04_selenium.txt
.github/dependency_versions/3.8/: 02_pytest.txt  03_colorama.txt  04_selenium.txt
.github/workflows/: release.yaml  test.yaml  test_3.6.yaml  test_3.8.yaml
django_expanded_test_cases/: __init__.py  constants.py  exceptions.py  readme.md  test_forms.py  test_urls.py  test_views.py
django_expanded_test_cases/constants/: __init__.py  auth_constants.py  debug_output_constants.py  general_handling_constants.py  selenium_constants.py
django_expanded_test_cases/mixins/: __init__.py  core_mixin.py  live_server_mixin.py  response_mixin.py
django_expanded_test_cases/templates/django_expanded_test_cases/: form.html  form_alt.html  index.html
django_expanded_test_cases/test_cases/: __init__.py  base_test_case.py  channels_live_server_test_case.py  core_mixin.py  integration_test_case.py  live_server_test_case.py  test_case_mixin.py  universal_live_server_test_case.py
docs/: generate_docs.sh  readme.md  requirements.txt
docs/source/: conf.py  configuration.rst  django_expanded_test_cases.mixins.rst  django_expanded_test_cases.rst  general_usage.rst  index.rst  managing_test_users.rst  package_overview.rst  quickstart.rst  roadmap.rst  test_cases.rst  version_history.rst
docs/source/api/: django_expanded_test_cases.constants.rst  django_expanded_test_cases.mixins.rst  django_expanded_test_cases.rst  django_expanded_test_cases.test_cases.rst  modules.rst
docs/source/configuration/: auth.rst  debug_output.rst  general.rst  selenium.rst  user.rst  users.rst
docs/source/test_cases/: base_test_case.rst  integration_test_case.rst  live_server_test_case.rst  overview.rst
docs/source/test_cases/integration_test_case/: other_functionality.rst  overview.rst  response_assertions.rst  url_handling.rst
etc_tests/: asgi.py  settings.py  views.py
etc_tests/test_cases/: test_base_case.py  test_integration_case.py  universal_live_test_mixin.py
etc_tests/test_cases/test_integration_case/: test_integration_auth.py  test_integration_debug_output.py
tests/: apps.py  asgi.py  settings.py  urls.py  urls_app.py  urls_root.py  views.py
tests/django_expanded_test_cases/testing/: app_urls.py  apps.py  asgi.py  forms.py  readme.md  settings.py  test_urls.py  test_views.py  urls.py  views.py
tests/django_expanded_test_cases/tests/: readme.md
tests/django_expanded_test_cases/tests/test_base_case/: test_base_auth.py  test_base_case.py
tests/django_expanded_test_cases/tests/test_integration_case/: test_integration_assertions.py  test_integration_auth.py  test_integration_debug_json_output.py  test_integration_debug_output.py  test_integration_helpers.py  test_integration_hooks.py
tests/django_expanded_test_cases/tests/test_live_server_case/: test_channels_live_server_case.py  test_live_server_case.py  universal_live_test_mixin.py
tests/templates/django_expanded_test_cases/: index.html
tests/test_cases/: test_base_case.py  test_channels_live_server_case.py  test_integration_case.py  test_live_server_case.py  universal_live_test_mixin.py
tests/test_cases/test_base_case/: test_base_auth.py  test_base_case.py
tests/test_cases/test_integration_case/: test_integration_assertions.py  test_integration_auth.py  test_integration_debug_output.py  test_integration_helpers.py
tests/test_cases/test_live_server_case/: test_channels_live_server_case.py
