[build-system]
requires = ['setuptools>=40.8.0', 'wheel']
build-backend = 'setuptools.build_meta:__legacy__'

[project]
name = "django-expanded-test-cases"
version = "0.7.2"
description = "Expands the existing Django TestCase class with extra functionality."
readme = "readme.md"
authors = [
    { name = "Brandon Rodriguez", email = "brodriguez8774@gmail.com" },
]
maintainers = [
    { name = "Brandon Rodriguez", email = "brodriguez8774@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Testing",
]
keywords = [
    "django",
    "testcases",
    "tests",
    "unittest",
    "unittesting",
]
dependencies = [
    "django >= 2.2.0",
    "beautifulsoup4 >= 4.11.0"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "pylint",
    "pylint-django",
]
doc = [
    "doc8",
    "pip-tools",
    "rstcheck",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-rtd-theme",
]
test = [
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-xdist",
]


[project.urls]
Homepage = "https://github.com/brodriguez8774/django-expanded-test-cases"


[tool.black]
line-length = 120
skip-string-normalization = 1
